--- a/ModelDRs.Rmd
+++ b/ModelDRs.Rmd
@@ -152,7 +152,7 @@ dtm.tfidf = dtm.tfidf[row.totals > 0, ] # 1247 rows
 y.tfidf   = y[row.totals > 0]
 
 # Get reduced DTMs
-## PCA, LSA, MDS
+## PCA and LSA
 dtm.lsa.10 = do.lsa(dtm.tfidf, ndims=10) # 1264, 10; Matrix object
 dtm.pca = do.pca(document_term_matrix) # 1264, 1264; Matrix object
 
@@ -216,17 +216,14 @@ kable(pca.eval.svmlinear) # ~73.67%
 ##### Top Models: dtm.eval.svmradial (82.14%), pca.eval.svmradial (82.10%), lsa.eval.svmlinear (82.08%)
 ```{r }
 # Get models based of of mean F1 score
-dim(document_term_matrix)
-length(y)
 model1 = model.fit(as.matrix(document_term_matrix), y, 'svmradial')
 model2 = model.fit(dtm.pca, y, 'svmradial')
 model3 = model.fit(dtm.lsa.10, y.tfidf, 'svmlinear')
 
-# Save Models as usermodelX.rds
-save(model1, file="usermodel1.rds")
-save(model2, file="usermodel2.rds")
-save(model3, file="usermodel3.rds")
-
+# Save Models as usermodelX.rda
+save(model1, file="usermodel1.rda")
+save(model2, file="usermodel2.rda")
+save(model3, file="usermodel3.rda")
 ```
 
 
