--- a/ModelDRs.Rmd
+++ b/ModelDRs.Rmd
@@ -224,6 +224,11 @@ model3 = model.fit(dtm.lsa.10, y.tfidf, 'svmlinear')
 save(model1, file="usermodel1.rda")
 save(model2, file="usermodel2.rda")
 save(model3, file="usermodel3.rda")
+
+# Save Models as usermodelX.rds
+saveRDS(model1, "./usermodel1.rds")
+saveRDS(model2, "./usermodel2.rds")
+saveRDS(model3, "./usermodel3.rds")
 ```
 
 
