--- a/Evaluation2.Rmd
+++ b/Evaluation2.Rmd
@@ -3,7 +3,7 @@ title: "Politician Model Evaluation"
 date: "4/18/2017"
 output: html_document
 ---
-## Test Model from User Data on Politician's Data
+## Test Model from Politician's Data on User's Tweets
 ```{r setup, include=FALSE}
 library(plyr)     # for recoding data
 library(NLP)      # for NLP
@@ -20,17 +20,19 @@ library(knitr)    # for kable
 
 ### Helper Functions
 ```{r Helper}
-load.data.politicians <- function() {
+load.data.DR <- function() {
   # preprocessed in python
-  tweets = read.csv('tweets_by_politicians.csv') # data is preprocessed in python
+  tweets = read.csv('DR_users.csv') # data is preprocessed in python
   tweets = tweets[,-1]
   tweets[1:3,]
-  table(tweets$party) # D:9, R:9
+  table(tweets$party) # D:881, R:383
   
   tweets$text = as.character(tweets$text)
+  tweets$state_code = as.character(tweets$state_code)
   
   # Recode Dems = 0, Reps = 1
   tweets$party = revalue(tweets$party, c("D"=0, "R"=1))
+  any(is.na(tweets$party))
 
   tweets[1:3,]
   return(tweets)
@@ -133,39 +135,36 @@ crossValidate <- function(document_term_matrix, y, classifier, k.fold=3) {
 
 ### Load Data
 #### Load Data & Create DTMs  
-##### Since the 3 top user models feature sets: document_term_matrix, dtm.pca, dtm.lsa.10
+##### Top 3 poli models feature sets: document_term_matrix(2) and dtm.pca
 ```{r Load}
-poli.tweets = load.data.politicians()
+user.tweets = load.data.DR()
 
 # Get corpus
-poli.corpus = Corpus(VectorSource(poli.tweets$text))
+user.corpus = Corpus(VectorSource(user.tweets$text))
 
 # Get DTM & y, and TFIDF Dtm & y.tfidf
-document_term_matrix = DocumentTermMatrix(poli.corpus) # 18 rows, 9137 cols
-y = poli.tweets$party # 18
-
-dtm.tfidf = DocumentTermMatrix(poli.corpus, control = list(weighting=weightTfIdf)) # no empty rows
-y.tfidf = poli.tweets$party
+document_term_matrix = DocumentTermMatrix(user.corpus) # 1264 rows
+y = user.tweets$party
 
 # Get reduced DTMs
-## PCA, LSA, MDS
-dtm.lsa.10 = do.lsa(dtm.tfidf, ndims=10) # 1264, 10; Matrix object
+## PCA
 dtm.pca = do.pca(document_term_matrix) # 1264, 1264; Matrix object
 ```
 
 ### Load Models  
-#### 3 Top Models: 
-Use same types of features in evaluation user dtm.tfiid -> politicians dtm.tfidf feature set
+#### Top 3 Politician's Models: dtm.eval.svmradial (88.57%), dtm.eval.svmlinear (85.71%), pca.eval.svmlinear (80.95%)
 ```{r }
 # Load 3 Top Models
-model1.user = readRDS("./usermodel1.rds")
-model2.user = readRDS("./usermodel2.rds")
-model3.user = readRDS("./usermodel3.rds")
+model1.poli = readRDS("./polimodel1.rds")
+model2.poli = readRDS("./polimodel2.rds")
+model3.poli = readRDS("./polimodel3.rds")
+
+model1.poli
 ```
 
 ### Model 1 Evaluation
 ```{r }
-y_predictions = model.predict(as.matrix(document_term_matrix), model1.user)
+y_predictions = model.predict(as.matrix(document_term_matrix), model1.poli)
 model1.user.eval = model.evaluate(y_predictions, y)
 model1.user.eval
 
@@ -173,7 +172,7 @@ model1.user.eval
 
 ### Model 2 Evaluation
 ```{r }
-y_predictions = model.predict(dtm.pca, model2.user)
+y_predictions = model.predict(as.matrix(document_term_matrix), model2.poli)
 model2.user.eval = model.evaluate(y_predictions, y)
 model2.user.eval
 
