--- a/Evaluation.Rmd
+++ b/Evaluation.Rmd
@@ -133,7 +133,7 @@ crossValidate <- function(document_term_matrix, y, classifier, k.fold=3) {
 
 ### Load Data from users and politicians.  
 #### Load Data & Create DTMs  
-##### Since the 3 top user models feature sets: document_term_matrix, dtm.pca, dtm.lsa.10
+##### Since the 3 top user models feature sets: document_term_matrix(2) and pca
 ```{r Load}
 poli.tweets = load.data.politicians()
 user.tweets = load.data.DR()
@@ -142,16 +142,18 @@ user.tweets = load.data.DR()
 poli.corpus = Corpus(VectorSource(poli.tweets$text))
 user.corpus = Corpus(VectorSource(user.tweets$text))
 
+user.document_term_matrix = DocumentTermMatrix(user.corpus)
+# Get DTM & y, and TFIDF Dtm & y.tfidf using user.corpus as a dictionary 
+## http://stackoverflow.com/questions/16630627/how-to-recreate-same-documenttermmatrix-with-new-test-data
 # Get DTM & y, and TFIDF Dtm & y.tfidf
-document_term_matrix = DocumentTermMatrix(poli.corpus, control = list(Dictionary=Terms(user.corpus))) # 18 rows, 9137 cols
+document_term_matrix = DocumentTermMatrix(poli.corpus, control = list(Dictionary=Terms(user.document_term_matrix))) # 18 rows, 9137 cols
 y = poli.tweets$party # 18
 
-dtm.tfidf = DocumentTermMatrix(poli.corpus, control = list(weighting=weightTfIdf)) # no empty rows
+dtm.tfidf = DocumentTermMatrix(poli.corpus, control = list(weighting=weightTfIdf, Dictionary=Terms(user.document_term_matrix))) # no empty rows
 y.tfidf = poli.tweets$party
 
 # Get reduced DTMs
-## PCA, LSA, MDS
-dtm.lsa.10 = do.lsa(dtm.tfidf, ndims=10) # 1264, 10; Matrix object
+## PCA, LSA
 dtm.pca = do.pca(document_term_matrix) # 1264, 1264; Matrix object
 ```
 
